fixed white gap by adding overflow -x:hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Poppins:wght@300;400&display=swap');
-    html {
-        margin: 0;
-        padding: 0;
-        scroll-behavior: smooth;
-    }
+html {
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
 }
+
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     width: 100%;
@@ -14,16 +19,21 @@ body {
     background-color: #ffffff;
 }
 
+
 /*Navbar*/
+
 .logo {
     width: 40px;
 }
 
+
 /*Hero Image*/
+
 .hero-image {
     width: 100%;
     min-width: 100vw;
 }
+
 .title,
 .title1,
 .fame-board-title,
@@ -31,6 +41,7 @@ body {
 .history-title {
     font-family: 'Poppins', sans-serif;
 }
+
 .title {
     font-size: 1.2rem;
     top: 35%;
@@ -39,6 +50,7 @@ body {
     position: absolute;
     color: #fff;
 }
+
 .title1 {
     font-size: 1.4rem;
     top: 50%;
@@ -49,7 +61,9 @@ body {
     font-weight: bold;
 }
 
+
 /*History*/
+
 .about-border,
 .about-border1 {
     display: block;
@@ -57,27 +71,35 @@ body {
     background: #FF0000;
     margin: 5px auto;
 }
+
 .about-border {
     width: 100px;
 }
+
 .about-border1 {
     width: 150px;
 }
+
 .history-text {
     margin-top: 2rem;
 }
 
+
 /*Fame Board*/
+
 img {
     width: 100%;
 }
+
 .fame-images {
     max-height: 50vh;
     min-height: 50vh;
 }
+
 .fame-name {
     color: #fff;
 }
+
 .fame-images-carousel {
     width: 100%;
     min-width: 100vw;
@@ -85,16 +107,19 @@ img {
     min-height: 50vh;
     max-height: 50vh;
 }
+
 .hover figure img {
     -webkit-transform: scale(1);
     transform: scale(1);
     -webkit-transition: .3s ease-in-out;
     transition: .3s ease-in-out;
 }
+
 .hover figure:hover img {
     -webkit-transform: scale(1.3);
     transform: scale(1.1);
 }
+
 figure {
     width: 100%;
     height: 100%;
@@ -103,54 +128,62 @@ figure {
     background: #fff;
     overflow: hidden;
 }
+
 figure:hover+span {
     bottom: -36px;
     opacity: 1;
 }
 
+
 /*The Beginings*/
+
 iframe {
     width: 100%;
     min-height: 50vh;
 }
 
+
 /*Footer*/
+
 .page-footer {
     background-color: #707070;
 }
+
 .footer-header,
 .footer-icon,
 .fab,
 .btn {
     color: #fff;
 }
+
 .fab {
     font-size: 1.2rem;
 }
+
 .footer-icon:hover,
 .fab:hover,
 .btn:hover {
     color: #000;
 }
+
 .subscribe {
     border-radius: 20px;
     text-align: center;
 }
 
+
 /*Media Queries*/
+
 @media only screen and (min-width: 768px) {
     .title {
         font-size: 1.5rem;
     }
-    
     .title1 {
         font-size: 2rem;
     }
-    
     li {
         margin-left: 1.5rem;
     }
-    
     iframe {
         width: 100%;
         max-width: 60vw;
@@ -158,17 +191,16 @@ iframe {
         min-height: 50vh;
     }
 }
+
 @media only screen and (min-width: 1024px) {
     .title {
         font-size: 2.4rem;
         top: 35%;
     }
-    
     .title1 {
         font-size: 3.5rem;
         left: 25%;
     }
-    
     .history-text {
         word-spacing: 5px;
         line-height: 25px;
@@ -176,16 +208,15 @@ iframe {
         margin-top: 3rem;
         padding-top: 5rem;
     }
-    
     .stadium {
         min-height: 70vh;
     }
-    
     .stadium-content,
     .stadium-content1 {
         line-height: 30px;
     }
 }
+
 @media only screen and (min-width: 1200px) {
     .stadium-content,
     .stadium-content1 {
